--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                          <li><a href="about-us.html">About Us</a></li>
 						 <li><a href="pdfupload.html">Upload Your Resume</a></li>
 						 <li><a href="contact.html">Contact Us</a></li>
+			    <li><a href="logplusd.html">Sign In/Sign Up</a></li>
                                <li><a href="logplusd.html">Sign Out</a></li>
                     </ul>
                </div>
