--- a/about-us.html
+++ b/about-us.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,6 +55,7 @@
                          <li class="active"><a href="about-us.html">About Us</a></li>
 						 <li><a href="pdfupload.html">Upload Your Resume</a></li>
 						 <li><a href="contact.html">Contact Us</a></li>
+			    <li><a href="logplusd.html">Sign In/Sign Up</a></li>
                                <li><a href="logplusd.html">Sign Out</a></li>
                          
                     </ul>
