--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,7 @@
                          <li><a href="about-us.html">About Us</a></li>
 						 <li><a href="pdfupload.html">Upload Your Resume</a></li>
 						 <li  class="active"><a href="contact.html">Contact Us</a></li>
+			    <li><a href="logplusd.html">Sign In/Sign Up</a></li>
                                <li><a href="logplusd.html">Sign Out</a></li>
                     </ul>
                </div>
