--- a/pdfupload.html
+++ b/pdfupload.html
@@ -160,6 +160,7 @@
                      <li><a href="about-us.html">About Us</a></li>
          <li class="active"><a href="pdfupload.html">Upload Your Resume</a></li>
          <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="logplusd.html">Sign In/Sign Up</a></li>
          <li><a href="logplusd.html">Sign Out</a></li>
                 </ul>
            </div>
